--- a/templates/modificar.html
+++ b/templates/modificar.html
@@ -9,7 +9,7 @@
         <section class="cantact_info">
             <section class="info_title">
                 <span class="fa fa-user-circle"></span>
-                <h2>id:<a name="ID">{{datos.1}}</a></h2>
+                <h2>id:<a name="ID">{{id}}</a></h2>
             </section>
             <section class="info_items">
                 <p><span class="fa fa-envelope"></span> borrador@gmail.com</p>
